--- a/src/app/pages/users/components/new-user/new-user.component.html
+++ b/src/app/pages/users/components/new-user/new-user.component.html
@@ -90,8 +90,8 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <button style="width: 100px" (click)="createUser()" type="button" class="btn btn-default waves-effect waves-light">Lưu</button>
-            <button style="width: 100px" (click)="redirect(users)" class="btn btn-danger waves-effect waves-light m-l-10">Hủy</button>
+            <button style="width: 150px" (click)="createUser()" type="button" class="btn btn-md btn-default waves-effect waves-light">Lưu</button>
+            <button style="width: 150px" (click)="redirect(users)" class="btn btn-danger btn-md waves-effect waves-light m-l-10">Hủy</button>
           </div>
         </div>
       </form>
