--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,6 +20,11 @@
               </ul>
             </li>
             <li class="has_sub">
+              <a [routerLink]="['/pages/cbd/activities/points']" class="waves-effect">
+            <i class="fa fa-pencil"></i>
+            <span> Điểm danh </span></a>
+            </li>            
+            <li class="has_sub">
               <a [routerLink]="['/pages/admin/organizations']" class="waves-effect">
             <i class="ti-bar-chart"></i>
             <span> Quản lý chi đoàn </span></a>
