--- a/src/app/pages/main/components/post/post.component.html
+++ b/src/app/pages/main/components/post/post.component.html
@@ -13,7 +13,7 @@
           </div>
           <div class="col-lg-4 col-md-4" style="height: 70px">
             <div class="pull-right" style="padding-top: 15px">
-              <div *ngIf="isLogged() && isCanRegister()">
+              <div *ngIf="isCanRegister()">
                 <button (click)="register(data.id)" class="btn btn-primary">
                           {{isRegistered?"Đã đăng ký":"Đăng ký"}}
                         </button>
